<resources>
    <string name="app_name">Profile Info</string>
    <string name="profile_info">Profile Info</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="e_mail">E-mail</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
</resources>